--- a/src/megatron/_chat.scss
+++ b/src/megatron/_chat.scss
@@ -14,7 +14,7 @@
     max-height: 100%;
     position: relative;
 
-    &::after {
+    &::before {
       @include background-image(linear-gradient(bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%));
       position: absolute;
       top: 0;
@@ -29,20 +29,36 @@
     @include flex(none);
   }
 
-  iframe {
+  .scroll-wrapper {
     width: 100%;
     height: 100%;
     position: absolute;
+    z-index: 5;
+  }
+
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
   }
 
   input {
     @include box-sizing(border-box);
     width: 100%;
     border: 0;
-    border-top: 1px solid $megatron-bar-background;
     outline: 0;
     padding: .25em .5em;
     font-size: 12px;
     line-height: 1.4;
+    border-radius: 0;
+
+    .phone &,
+    .tablet & {
+      border-bottom: 1px solid $megatron-bar-background;
+    }
+
+    .desktop & {
+      border-top: 1px solid $megatron-bar-background;
+    }
   }
 }
